--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5;url=https://regisabellard.myportfolio.com/">
+    <title>Redirection en cours...</title>
+</head>
+<body>
+    <h1>Redirection en cours...</h1>
+    <p>Vous allez être redirigé vers <a href="https://regisabellard.myportfolio.com/">jo'tefaislapeau</a> dans quelques secondes.</p>
+
+    <script>
+        // Redirection JavaScript pour plus de compatibilité
+        setTimeout(function() {
+            window.location.href = "https://regisabellard.myportfolio.com/";
+        }, 5000); // 5000 millisecondes = 5 secondes
+    </script>
+</body>
+</html>
+
