--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Redirection en cours...</h1>
-    <p>Vous allez être redirigé vers <a href="https://regisabellard.myportfolio.com/">jo'tefaislapeau</a> dans quelques secondes.</p>
+    <p>Vous allez être redirigé vers <a href="https://regisabellard.myportfolio.com/">Jo'tefaislapeau</a> dans quelques secondes.</p>
 
     <script>
         // Redirection JavaScript pour plus de compatibilité
